# Graphics-Playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  renderDoc.cap
Assets/: 5m reference.fbx  box.gltf  handModel.fbx  handModel2.blend  handModel2.fbx
Assets/Game/: RoomTest.blend  RoomTest.gltf
Assets/quanternius/tree/: MapleTree_5.fbx
Shaders/: CMakeLists.txt  MeshSelect.vert  MeshTest.frag  MeshTest.vert  imgui.frag  imgui.vert
Shaders/Screenspace/: Image.frag  Image2.frag  ImageArray.frag  ImageMirror.frag  ImageSingle.frag  ImageSingleArray.frag  ImageTwoArray.frag  Screenspace.vert
Shaders/include/: Color.inc  test.inc
Source/: CMakeLists.txt  PlatformDebug.cpp  PlatformDebug.h  main.cpp
Source/Engine/: AABB.h  AllocationCallbacks.h  CMakeLists.txt  Callback.h  Engine.cpp  Engine.h  FileIO.cpp  FileIO.h  FlyCamera.cpp  FlyCamera.h  IGraphicsBase.h  Input.cpp  Input.h  Job.cpp  Job.h  Physics.cpp  Physics.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsTransform.cpp  PhysicsTransform.h  StateBase.h  Transform.cpp  Transform.h  Window.cpp  Window.h
Source/Engine/Camera/: Camera.cpp  Camera.h  FlyCamera.cpp  FlyCamera.h
Source/Game/: CMakeLists.txt  StateTest.cpp  StateTest.h
Source/Graphics/: Buffer.cpp  Buffer.h  CMakeLists.txt  Conversions.h  Devices.cpp  Devices.h  FrameBuffer.cpp  FrameBuffer.h  Graphics.cpp  Graphics.h  Helpers.h  ImGuiGraphics.cpp  ImGuiGraphics.h  Image.cpp  Image.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  RenderTarget.cpp  RenderTarget.h  Screenspace.cpp  Screenspace.h  SwapChain.cpp  SwapChain.h  VRGraphics.cpp  VRGraphics.h  Window.cpp  Window.h
Source/Graphics/Loaders/: AssimpLoader.h  DDSLoader.h  Loader.cpp  LoaderBase.h  StbImageLoader.cpp  StbImageLoader.h  TinygltfLoader.h
Source/Libraries/: CMakeLists.txt
